bug 339225 use the more complex launcher scripts for RTBasic, have RTWeb reuse RTBasic's feature so we can install RTWeb on the top of RTBasic